Add less variables

--- a/src/colors.less
+++ b/src/colors.less
@@ -15,5 +15,7 @@
 @white_faded_row_hover: rgba(255,255,255,0.2);
 @white_faded_row: rgba(255,255,255,0.07);
 
+@gray: hsl(0, 0%, 90%)
+
 @gray_faded_setting_hover: hsla(0, 0%, 50%, 0.15);
 @black_faded_setting: hsla(0, 0%, 0%, 0.2);
