--- a/src/general.css
+++ b/src/general.css
@@ -3,7 +3,7 @@
 
 
 ._font_general {
-    letter-spacing: 0.06rem;
+    letter-spacing: 0.5px;
     text-transform: uppercase;
     font-family: 'Futura No 2. Semi Bold', Arial;
 }
@@ -12,6 +12,6 @@
 .__text {
     composes: _font_general;
     color: @gray;
-    font-size: 2.7rem;
+    font-size: 27px;
     line-height: @rowHeight;
 }
