--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,4 +1,13 @@
 @font-face {
     font-family: "Futura No 2 D Semi Bold";
-    src: url(https://cdn.rawgit.com/Resike/Overwatch/2580a73d/Fonts/Futura.ttf);
+    src:
+        url("https://cdn.rawgit.com/Resike/Overwatch/2580a73d/Fonts/Futura.ttf") format('truetype'),
+        url("https://us.battle.net/forums/static/fonts/f014015d/f014015d.woff") format("woff");
 }
+
+@font-face {
+    font-family: "Big Noodle Too";
+    src:
+        url("https://us.battle.net/forums/static/fonts/bignoodletoo/bignoodletoo.woff") format("woff");
+}
+
